# AI-powered-business-Automation

./: .env.example  .gitignore  README.md  ai-co-founder.md  plan.md  tasks.md
backend/: README.md  SETUP_GUIDE.md  agent_hooks.py  ai_cofounder.db  celery_app.py  config.json  custom_tools.py  database.py  main.py  migrate_config_to_db.py  models.py  pyproject.toml  requirements.txt  tasks.py  workflow_manager.py
backend/guadrails/: input_guardrail.py  output_guardrails.py
backend/handoffagents/: bussiness_plan_agen.py  competitorWebsiteScraper.py  idea_generator.py  pitch_deck_agent.py
backend/integrations/: email_sender.py  google_sheets.py  sendgrid_email.py  slack_notifier.py  slack_oauth.py
backend/tools/: Firecrawl_tool.py  arxiv.py  finance_tool.py  formater_tool.py  gnews_tool.py  market_research_tool.py  playwright_tool.py  reddit.py  report_export.py  swot_tool.py  tools.py  x_com.py
